[package]
name = "dmn-lite-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dmn-lite core types: TypedValue, FieldId, Predicate, Instr, CompiledDecision"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
smallvec = { workspace = true }
